[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Main Characters/Player/Hit (32x32).png" type="Texture" id=1]
[ext_resource path="res://Assets/Main Characters/Player/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://Assets/Main Characters/Player/Wall Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://Assets/Main Characters/Player/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://Assets/Background/backextin.png" type="Texture" id=5]
[ext_resource path="res://Scripts/get_name.gd" type="Script" id=6]
[ext_resource path="res://Assets/music/music_game.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[node name="get_name" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 179, 93 )
scale = Vector2( 0.337083, 0.337083 )
texture = ExtResource( 5 )

[node name="play_game" type="Button" parent="."]
margin_left = 257.0
margin_top = 167.0
margin_right = 309.0
margin_bottom = 187.0
text = "JOGAR"

[node name="text_name" type="TextEdit" parent="."]
margin_left = 106.0
margin_top = 97.0
margin_right = 231.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 112.0
margin_top = 79.0
margin_right = 220.0
margin_bottom = 110.0
text = "Insira seu nome:
"

[node name="player" type="KinematicBody2D" parent="."]

[node name="texture" type="Sprite" parent="player"]
position = Vector2( -536, -65 )
scale = Vector2( 2.44922, 2.44922 )
texture = ExtResource( 3 )
offset = Vector2( 236, 87 )
hframes = 5

[node name="anim" type="AnimationPlayer" parent="player"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="pressed" from="play_game" to="." method="_on_play_game_pressed"]
